tests/neg-custom-args/captures/usingLogFile.check
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:23:27 ------------------------------------------------------
23 |  val later = usingLogFile { f => () => f.write(0) } // error
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              The expression's type {*} () -> Unit is not allowed to capture the root capability `*`.
   |              This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:29:9 -------------------------------------------------------
29 |  later2.x()  // error
   |  ^^^^^^^^
   |  The expression's type {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:31:6 -------------------------------------------------------
31 |  var later3: () => Unit = () => ()  // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  The mutable variable's type {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:37:9 -------------------------------------------------------
37 |  later4.x() // error
   |  ^^^^^^^^
   |  The expression's type {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
